# GuardianAI

./: MERGE.md  README.md  guardian-ai.ipynb  pyproject.toml
api/: main.py
data/: fraud_data.csv
